# pdmath

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
app/: CMakeLists.txt  main.cpp
app/glad/: CMakeLists.txt  glad.c
app/include/: IndexBuffer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
app/include/KHR/: khrplatform.h
app/include/glad/: glad.h
app/shaders/: Shader.cpp  crate.vert  crate0.frag  orange.frag  orange.vert
app/src/: GLDebugger.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
demo/: CMakeLists.txt  main.cpp
demo/cmake/: Findglad.cmake  Findglfw.cmake  Findglm.cmake  Findimgui.cmake
demo/include/: GLDebugger.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexBufferLayout.hpp
demo/include/stb/: stb_image.h
demo/shaders/: blue.frag
demo/src/: GLDebugger.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
demo/stb_image/: CMakeLists.txt
include/pdmath/: AABBox.hpp  BSphere.hpp  Camera.hpp  Line.hpp  Line3.hpp  Line4.hpp  Matrix.hpp  Matrix3.hpp  Matrix4.hpp  OBBox.hpp  Plane.hpp  Point.hpp  Point3.hpp  Point4.hpp  Quaternion.hpp  Vector.hpp  Vector3.hpp  Vector4.hpp  util.hpp
solver/: CMakeLists.txt  main.cpp
src/: AABBox.cpp  BSphere.cpp  CMakeLists.txt  Camera.cpp  Line.cpp  Line3.cpp  Line4.cpp  Matrix.cpp  Matrix3.cpp  Matrix4.cpp  OBBox.cpp  Plane.cpp  Point.cpp  Point3.cpp  Point4.cpp  Quaternion.cpp  Vector.cpp  Vector3.cpp  Vector4.cpp
tests/: CMakeLists.txt  camera.cpp  collisions.cpp  homeworks.cpp  lines_and_planes.cpp  matrices.cpp  points.cpp  quaternions.cpp  vectors.cpp
